# MyProjects

Greed_algorithm/: Greedy Algorithm  Greedy Algorithm.cpp
flappy_bird/: find  find.cpp  header.h  input.cpp  main  main.cpp  mean.cpp  move.cpp  poll.cpp  print.cpp  test  variables.cpp
snake/: .best_score.txt  CMakeLists.txt  README.md  a.out  apple.cpp  check.cpp  file.cpp  game  game.cpp  game_over.cpp  getch.cpp  header.h  input.cpp  main  main.cpp  move.cpp  print  print.cpp  snake.cpp
snake v1/: CMakeLists.txt  a.out  main  main.cpp  win32_main.cpp
tic_tac_toe/: a.out  main  main.cpp  somefile1.txt
wordle/: DAWIT_DEJENE--ETS0467_14--Wordle edit.cpp  new wordle.cpp
